# clovers-agent

./: .gitignore  bot.bat  build.bat  chat.md  pyproject.toml  test.py  text.py
clovers-agent/: pyproject.toml
clovers-agent-embedding/: _pyproject.toml  embedding.ipynb
clovers-agent-embedding/clovers_agent_embedding/: embedding.py
clovers-agent-interactive-fiction/: pyproject.toml
clovers-agent-interactive-fiction/clovers_agent_interactive_fiction/: __init__.py  main.py  toolkit.py
clovers-agent-toolkit/: pyproject.toml
clovers-agent-toolkit/clovers_agent_toolkit/: __init__.py  config.py  ex.py  fetch.py  memory.py  network.py  toolkit.py
clovers-agent-toolkit/clovers_agent_toolkit/memory/: constants.py  main.py
clovers-agent-toolkit/clovers_agent_toolkit/workspace/: __init__.py  docker.py  main.py
clovers-agent/clovers_agent/: __init__.py  api.py  config.py  constants.py  core.py  embedding.py  main.py  session.py  skill.py  utils.py
clovers-agent/clovers_agent/typing/: __init__.py  message.py  payload.py
clovers-interactive-fiction/: pyproject.toml
clovers-interactive-fiction/clovers_interactive_fiction/: __init__.py  constant.py  main.py
clovers_agent/: __init__.py  config.py  core.py  pyproject.toml
clovers_agent.page/: index.html  package-lock.json  package.json  vite.config.ts
clovers_agent.page/src/: style.css
clovers_agent.page/src/code/: chat.ts
clovers_agent.page/src/styles/: base.css  chat.css  code.css  ui.css
clovers_agent/clovers_agent/: __init__.py  config.py  core.py
clovers_agent/clovers_agent/typing/: clovers.py
clovers_agent/typing/: __init__.py  json_schema.py  message.py  payload.py
clovers_agent_toolkit/: LICENSE  pyproject.toml
clovers_agent_toolkit/clovers_agent_toolkit/: fetch.py
clovers_agent_toolkit/clovers_agent_toolkit/workspace/: __init__.py
example/toolkit/: __init__.py  toolkit.py  workspace.py
others/: data.py  erotic.py
prompt-generator/: PROMPT.md  prompt.py  test.py
sample/: .gitignore  bot.py  pyproject.toml
skills/netease-cloudmusic/: SKILL.md  get-user-playlist.md  organize-playlist.md  search-songs.md
skills/on-erotic/: SKILL.md  __init__.py  skill.py
skills/on-skill/: SKILL.md  skill.py
src/clovers_agent/: __init__.py  config.py  core.py
src/clovers_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/clovers_agent/typing/: __init__.py  clovers.py  payload.py
toolkit/: pyproject.toml
toolkit/clovers_agent_toolkit/: config.py  fetch.py
toolkit/clovers_agent_toolkit/workspace/: GITIGNORE  __init__.py  docker.py
