[project]
name = "clovers-agent"
version = "0.0.1"
description = ""
authors = [{ name = "KarisAya", email = "karisaya@foxmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = ["clovers(>=0.4.6,<1.0.0)", "httpx>=0.28.1"]

[tool.uv.workspace]
members = ["sample", "toolkit"]
