[project]
name = "clovers-agent"
version = "0.0.4"
description = ""
authors = [{ name = "KarisAya", email = "karisaya@foxmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = ["clovers(>=0.4.6,<1.0.0)", "httpx>=0.28.1", "pydantic>=2.12.5"]

[tool.uv.workspace]
members = ["sample", "toolkit", "."]

[tool.uv.sources]
clovers-agent = { workspace = true }
