[project]
name = "clovers-agent"
version = "0.2.3"
description = ""
authors = [{ name = "KarisAya", email = "karisaya@foxmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "clovers>=0.4.11,<1.0.0",
    "pydantic>=2.12.5",
    "httpx>=0.28.1",
    "numpy>=2.4.4",
    "torch>=2.5.0",
    "sentence-transformers>=5.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clovers_agent"]
