[project]
name = "clovers-agent"
version = "0.2.16"
description = ""
authors = [{ name = "KarisAya", email = "karisaya@foxmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "clovers>=0.5.1",
    "clovers-client>=0.3.2",
    "clovers-apscheduler>=0.3.0",
    "pydantic>=2.13.4",
    "httpx>=0.28.1",
    "puremagic>=2.2.0",
    "python-frontmatter>=1.1.0",
    "numpy>=2.4.4",
    "torch>=2.5.0",
    "sentence-transformers>=5.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clovers_agent"]
