[project]
name = "clovers-agent"
version = "0.2.0"
description = ""
authors = [{ name = "KarisAya", email = "karisaya@foxmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = ["clovers>=0.4.11,<1.0.0", "httpx>=0.28.1", "pydantic>=2.12.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clovers_agent"]

[tool.uv.sources]
clovers = { path = "../../clovers" }
